--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.1.1
   geolocator: ^10.1.0
   cached_network_image: ^3.3.0
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
