--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   geolocator: ^10.1.0
   cached_network_image: ^3.3.0
   image_picker: ^1.2.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
